--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19</version>
+                <version>2.11</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
@@ -78,7 +78,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.2.201409121644</version>
+                <version>0.8.7</version>
                 <executions>
                     <execution>
                         <id>jacoco-initialize</id>
@@ -110,6 +110,7 @@
                 <version>2.8.2</version>
             </plugin>
 
+
             <plugin>
                 <groupId>com.jelastic</groupId>
                 <artifactId>jelastic-maven-plugin</artifactId>
@@ -124,6 +125,12 @@
             </plugin>
 
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+
+            </plugins>
+        </pluginManagement>
         <extensions>
             <extension>
                 <groupId>org.apache.maven.wagon</groupId>
